# norms-newsletter

./: .gitignore  CLAUDE.md  COST_ANALYSIS.md  DESIGN.md  MILESTONES.md  README.md  RUNBOOK.md  SETUP.md  SPEC.md  STRESS_TEST_FINDINGS.md  main.py  pyproject.toml
.github/workflows/: README.md  collect.yml  collect_fallback.yml  publish.yml
config/: README.md  pipeline.yaml  sources.yaml
prompts/: README.md  audio_script_v1.md  editor_v1.md  scoring_v1.md  simplify_v1.md  voice.md  writer_v1.md
scripts/: README.md  norm.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/fixtures/: fallback.json  normal.json  (+1 more)
spikes/: README.md  check_anthropic.py  check_embeddings.py  check_iceberg.py  check_tts.py
src/: README.md  archive.py  bronze.py  collector.py  config.py  degraded_check.py  enrich.py  health.py  runlog.py  schedule.py  storage.py
tests/: README.md  conftest.py  test_adapters.py  test_adapters_m6.py  test_archive.py  test_audio_script.py  test_bronze.py  test_canonical.py  test_cluster.py  test_collector.py  test_config.py  test_dedup.py  test_degraded_check.py  test_edition_context.py  test_edition_plan.py  test_edition_schema.py  test_enrich.py  test_headline_gate.py  test_health.py  test_item_id.py  test_prior_mentions.py  test_readability.py  test_run_audio.py  test_run_edition.py  test_run_silver.py  test_runlog.py  test_runlog_logged_run.py  test_runlog_reasons.py  test_schedule.py  test_score.py  test_setup_failure_is_logged.py  test_silver_table.py  test_simplify.py  test_tts.py  test_workflows.py  test_writer_stage.py
(+81 files in other folders)
