[project]
name = "norms-newsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "duckdb>=1.5.4",
    "feedparser>=6.0.12",
    "google-genai>=2.12.1",
    "httpx>=0.28.1",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pyiceberg>=0.11.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
